<resources>
    <string name="app_name">ShoeStore</string>
    <string name="fragment_shoe_details">Shoe Details</string>
    <string name="fragment_welcome">Welcome</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_shoe_list">Shoe List</string>
    <string name="email_label_text">E-mail</string>
    <string name="email_hint">insert@youremail.add</string>
    <string name="password_label_text">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="password_hint">y0u4+p455w04d</string>
    <string name="welcome_title_text">Welcome!!!</string>
    <string name="welcome_body_text">…to your new and awesome experience!\nSet your foot in and enjoy!</string>
    <string name="step_in">Step in</string>
    <string name="instruction_title">"… but before, let\'s ensure this will fit to you, step by step!"</string>
    <string name="instruction_body_text">The application is compose of two screens:\n        • A list of all your shoes (<i>Shoe list</i>)\n        • A form to include new shoes (<i>Shoe details</i>)\n        \n        The Shoe list will be your main screen, and from that, you can include new shoes in Shoe details by clicking in the <b>+</b> button.</string>
    <string name="kick_in">Kick in!</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="fragment_instruction">Instructions</string>
    <string name="logout_item">Logout</string>
</resources>
