<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- Layout for each shoe item, to be included in ScrollView (in the inner Linear Layout) -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_default_radius"
        android:baselineAligned="false"
        android:elevation="@dimen/cardview_default_elevation"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameLabel"
                style="@style/itemLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/companyLabel"
                style="@style/itemLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company" />

            <TextView
                android:id="@+id/sizeLabel"
                style="@style/itemLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size" />

            <TextView
                android:id="@+id/descriptionLabel"
                style="@style/itemLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameValue"
                style="@style/itemValueStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{shoe.name}" />

            <TextView
                android:id="@+id/companyValue"
                style="@style/itemValueStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{shoe.company}" />

            <TextView
                android:id="@+id/sizeValue"
                style="@style/itemValueStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(shoe.size)}" />

            <TextView
                android:id="@+id/descriptionValue"
                style="@style/itemValueStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@{shoe.description}" />
        </LinearLayout>
    </LinearLayout>
</layout>